--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ress": "^5.0.2",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
-    "vuex": "^4.0.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
