--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "fuse.js": "^6.5.3",
     "ress": "^5.0.2",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0",
